Fix menu-item layout alignment updating content structure and adding display:flex

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,6 @@ h2 {
     font-weight: 900;
     letter-spacing: 2px;
     font-size: 200%;
-    line-height: 0%;
     color: var(--black);
     margin-bottom: 1em;
 }
@@ -307,7 +306,7 @@ input[type=text],input[type=email],select, textarea {
     /* Define a background image at */
     height: 100%;
     width: 100%;
-    background: url("../images/cheerful-happy-couple-drinking-wine.jpg") no-repeat center center;
+    background: url("../images/cheeses-and-wine-on-a-wooden-table.jpg") no-repeat center center;
     background-size: cover;
     margin: 0 auto;
     position: absolute;
@@ -333,7 +332,7 @@ input[type=text],input[type=email],select, textarea {
     background-color: rgba(69, 69, 76, .7);
     width: 20%;
     height: 15%;
-    top: 60%;
+    top: 33%;
     margin: 0 auto;
     padding: 3em;
     position: relative;
@@ -367,13 +366,12 @@ input[type=text],input[type=email],select, textarea {
 }
 
 #dinning-menu, #wine-menu, #desserts-menu {
-        /* Creat a box to display "menu items" side by side */
-        margin: 4em 8em 4em 8em;
-        color: var(--white);
-        width: 90%;
-        height: 50em;
-        float: left;
-        box-sizing: border-box;
+    margin: 4em 8em 4em 8em;
+    color: var(--white);
+    width: 95%;
+    height: 50em;
+    float: left;
+    box-sizing: border-box;
 }
 
 .menu-item-list {
@@ -382,12 +380,14 @@ input[type=text],input[type=email],select, textarea {
 }
 
 .menu-item-list .menu-item {
-    height: 15em;
+    height: 21em;
     border: 1px solid black;
-    width: 48%;
+    width: 45%;
     margin: 1.2em;
     list-style-type: none;
     float: left;
+    display: flex;
+    flex-direction: row;
 }
 
 .menu-item img {
@@ -396,29 +396,33 @@ input[type=text],input[type=email],select, textarea {
     float: left;
 }
 
-.menu-item h2{
-    color: var(--third-color);
-    position: relative;
-    top: 1em;
-    left: 1em;
+.menu-item-list .menu-item .details {
+    display: flex;
+    flex-direction: column;
+    width: 77%;
 }
 
-.menu-item p{
+.menu-item-list .menu-item .details .title { 
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 4% 4% 0 4%;
+}
+
+.menu-item-list .menu-item .details .title h2 {
+    color: var(--third-color);
+}
+
+.menu-item-list .menu-item .details p {
     color: var(--black);
-    position: relative;
-    top: 2em;
-    left: 1.3em;
+    padding: 0 4% 0 4%;
 }
 
 .menu-item #price {
-    position: relative;
-    top: -1.5em;
-    left: 16em;
     text-transform: uppercase;
     font-weight: 900;
     letter-spacing: 2px;
     font-size: 200%;
-    line-height: 0%;
     color: var(--black);
     margin-bottom: 1em;
 }
